# VentureCanvas

./: .env.example  .gitignore  LICENSE  Plan.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.nicegui/: storage-user-37a5b9de-6603-47b8-ab0b-d645acf21521.json
Backend/: Backend Notizen  extensions.py  requirements.txt
Backend/app/: config.py
Backend/app/models/: basket.py  comment.py  project.py  user.py
Backend/app/routes/: projects.py
Backend/app/services/: auth_service.py  basket_service.py  comment_service.py  project_service.py
docs/architecture-diagrams/: er_diagram.puml  uml_class_architecture.puml  uml_use_case_diagram.puml
tests/: conftest.py  test_db.py  test_integration.py  test_unit.py
venturecanvas/: __init__.py  __main__.py  application.py
venturecanvas/data_access/: __init__.py  dao.py  db.py  password_hasher.py  seed.py
venturecanvas/domain/: __init__.py  models.py
venturecanvas/services/: __init__.py  auth_service.py  collection_service.py  errors.py  project_service.py
venturecanvas/static/: styles.css
venturecanvas/ui/: __init__.py  controllers.py  pages.py  session_state.py
